--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,10 @@ ul {
   list-style: none;
 }
 
+button {
+  padding: 0;
+}
+
 @font-face {
   font-family: 'cocogoose';
   src: url("../fonts/Cocogoose.woff");
